appId: com.highdesert.annum
name: Scenario salary
---
- runFlow:
    file: ../common/open-scenario.yaml
    env:
      SCENARIO: salary
- extendedWaitUntil:
    visible: 'You can spend \$1,100 until payday on Oct 5\. About \$91 a day\.'
    timeout: 5000
- assertNotVisible: 'Taxes, .*'
- takeScreenshot: scenario-salary
- tapOn: 'Money'
- extendedWaitUntil:
    visible: 'Savings, \$7,600'
    timeout: 5000
- assertNotVisible: 'Taxes, .*'
- assertNotVisible: 'Taxes · 2026'
- takeScreenshot: scenario-salary-money
